Changing the title to 60px

--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -13,12 +13,15 @@
     color: #282544;
   }
 
+  title {
+    @apply text-4xl md:text-5xl;
+  }
   h1 {
     @apply text-4xl md:text-5xl;
   }
 
   h2 {
-    @apply text-3xl md:text-4xl md:leading-10 leading-6 tracking-wide;
+    @apply text-3xl md:text-4xl md:leading-6 leading-6 tracking-wide;
   }
 
   h3 {
