--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -21,7 +21,7 @@
   }
 
   h2 {
-    @apply text-3xl md:text-4xl md:leading-6 leading-6 tracking-wide;
+    @apply text-2xl md:text-3xl md:leading-6 leading-6 tracking-wide;
   }
 
   h3 {
@@ -29,15 +29,12 @@
   }
 
   h4 {
-    @apply text-2xl leading-7;
+    @apply text-xl md:text-2xl leading-6 md:leading-7;
   }
 
-  h5 {
-    @apply text-6xl md:text-9xl;
-  }
 
   h6 {
-    @apply text-xl leading-5 tracking-wide;
+    @apply text-xl leading-5;
   }
 
   p {
