moved design to archive, changed spacing/optimized things for mobile, changed buttons and hovers updated images

--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -117,6 +117,12 @@
   display: block;          /* Show text when hovering */
   font-size: 4px;         /* Adjust size of the text inside the cursor */
 }
+@media (hover: none) and (pointer: coarse) {
+  .cursor,
+  .cursor-follower {
+    display: none; /* Hide the custom cursor */
+  }
+}
 
 /* Custom infinite scrolling animation */
 @keyframes scroll-left {
