--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -21,31 +21,37 @@
   }
 
   h2 {
-    @apply text-3xl md:text-4xl md:leading-8 leading-6 tracking-wide;
+    @apply text-3xl md:text-4xl md:leading-8 leading-6 tracking-wide 2xl:text-[40px];
   }
 
   h3 {
-    @apply text-2xl md:text-3xl md:leading-8 leading-6 tracking-wide	;
+    @apply text-2xl md:text-3xl 2xl:text-4xl md:leading-8 leading-6 tracking-wide	;
   }
 
   h4 {
-    @apply text-xl md:text-2xl leading-6 md:leading-7;
+    @apply text-xl md:text-2xl leading-6 md:leading-7 2xl:text-3xl;
   }
 
   h6 {
-    @apply text-xl leading-5;
+    @apply text-xl leading-5 2xl:text-2xl;
   }
 
   p {
-    @apply text-lg leading-4;
+    @apply text-lg leading-4 2xl:text-xl;
   }
 
   .normal-section {
     @apply px-4 md:px-8 flex flex-col md:flex-row space-y-3;
   }
 
-  .smolwidth {
+  .smolwidth .smolwidth {
     max-width: 548px;
+  }
+  
+  @media (min-width: 1536px) { 
+    .smolwidth {
+      max-width: 800px; 
+    }
   }
 
   .midwidth {
@@ -63,13 +69,15 @@
   }
   
 
+  
+
 /* Default cursor style */
 .cursor {
   position: absolute;
   pointer-events: none;
   background-color: #F9DDDC;  /* Change to your preferred color */
-  width: 16px;  /* Normal size */
-  height: 16px;
+  width: 1rem;  /* Normal size */
+  height: 1rem;
   border-radius: 50%;  /* Circular shape */
   z-index: 1000;
   transform: translate(-50%, -50%);  /* Center the cursor */
@@ -83,8 +91,8 @@
   pointer-events: none;
   background-color: rgba(255, 255, 255, 0.3);  /* Light transparent color */
 
-  width: 32px;  /* Default size */
-  height: 32px;
+  width: 2rem;  /* Default size */
+  height: 2rem;
   border-radius: 50%;
   opacity: 0;  /* Initially invisible */
   z-index: 999;
@@ -92,7 +100,6 @@
   transition: opacity 0.3s ease-out, transform 0.2s ease-out;
 }
 
-/* Enlarge the cursor and make the follower visible when hovering over the music icon */
 .cursor.hovering {
   transform: scale(6) translate(-50%, -50%);  /* Enlarge the cursor on hover */
 }
@@ -125,6 +132,17 @@
     display: none; /* Hide the custom cursor */
   }
 }
+
+@media (min-width: 1536px) { /* 2XL screens */
+  .cursor.hovering {
+    transform: scale(8) translate(-50%, -50%); /* Increase size */
+  }
+
+  .cursor-follower.hovering {
+    transform: scale(3) translate(-50%, -50%); /* Bigger follower */
+  }
+}
+
 
 /* Custom infinite scrolling animation */
 @keyframes scroll-left {
