refactor: installed prettier and formatted everything

--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -7,7 +7,6 @@
     background-color: #fcfcfc;
   }
 
-
   html {
     font-family: "Darker Grotesque", sans-serif;
     font-weight: 500;
@@ -26,7 +25,7 @@
   }
 
   h3 {
-    @apply text-2xl md:text-3xl 2xl:text-4xl md:leading-8 leading-6 tracking-wide	;
+    @apply text-2xl md:text-3xl 2xl:text-4xl md:leading-8 leading-6 tracking-wide;
   }
 
   h4 {
@@ -48,10 +47,10 @@
   .smolwidth {
     max-width: 548px;
   }
-  
-  @media (min-width: 1536px) { 
+
+  @media (min-width: 1536px) {
     .smolwidth {
-      max-width: 800px; 
+      max-width: 800px;
     }
   }
 
@@ -63,136 +62,127 @@
     max-width: 900px;
   }
 
-
-  
   @layer utilities {
-
   }
-  
 
-  
+  /* Default cursor style */
+  .cursor {
+    position: absolute;
+    pointer-events: none;
+    background-color: #f9dddc; /* Change to your preferred color */
+    width: 1rem; /* Normal size */
+    height: 1rem;
+    border-radius: 50%; /* Circular shape */
+    z-index: 1000;
+    transform: translate(-50%, -50%); /* Center the cursor */
+    transition: transform 0.2s ease-out; /* Smooth transition for scaling */
+  }
 
-/* Default cursor style */
-.cursor {
-  position: absolute;
-  pointer-events: none;
-  background-color: #F9DDDC;  /* Change to your preferred color */
-  width: 1rem;  /* Normal size */
-  height: 1rem;
-  border-radius: 50%;  /* Circular shape */
-  z-index: 1000;
-  transform: translate(-50%, -50%);  /* Center the cursor */
-  transition: transform 0.2s ease-out;  /* Smooth transition for scaling */
-  
-}
-
-/* Follower cursor style */
-.cursor-follower {
-  position: absolute;
-  pointer-events: none;
-  background-color: rgba(255, 255, 255, 0.3);  /* Light transparent color */
-
-  width: 2rem;  /* Default size */
-  height: 2rem;
-  border-radius: 50%;
-  opacity: 0;  /* Initially invisible */
-  z-index: 999;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.3s ease-out, transform 0.2s ease-out;
-}
-
-.cursor.hovering {
-  transform: scale(6) translate(-50%, -50%);  /* Enlarge the cursor on hover */
-}
-
-.cursor-follower.hovering {
-  opacity: 1;
-  transform: scale(2) translate(-50%, -50%); /* Slightly bigger follower */
-}
-
-/* Text inside the cursor */
-.cursor-text {
-  display: none;           /* Hide text initially */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(233, 41, 137);            /* Adjust color as needed */
-  pointer-events: none;    /* Avoid interfering with cursor events */
-  line-height: 4px;        /* Adjust line height to ensure proper spacing */
-  text-align: center;      /* Align the text to the center horizontally */
-}
-
-.cursor.hovering .cursor-text {
-  display: block;          /* Show text when hovering */
-  font-size: 4px;         /* Adjust size of the text inside the cursor */
-}
-@media (hover: none) and (pointer: coarse) {
-  .cursor,
+  /* Follower cursor style */
   .cursor-follower {
-    display: none; /* Hide the custom cursor */
-  }
-}
+    position: absolute;
+    pointer-events: none;
+    background-color: rgba(255, 255, 255, 0.3); /* Light transparent color */
 
-@media (min-width: 1536px) { /* 2XL screens */
+    width: 2rem; /* Default size */
+    height: 2rem;
+    border-radius: 50%;
+    opacity: 0; /* Initially invisible */
+    z-index: 999;
+    transform: translate(-50%, -50%);
+    transition:
+      opacity 0.3s ease-out,
+      transform 0.2s ease-out;
+  }
+
   .cursor.hovering {
-    transform: scale(8) translate(-50%, -50%); /* Increase size */
+    transform: scale(6) translate(-50%, -50%); /* Enlarge the cursor on hover */
   }
 
   .cursor-follower.hovering {
-    transform: scale(3) translate(-50%, -50%); /* Bigger follower */
+    opacity: 1;
+    transform: scale(2) translate(-50%, -50%); /* Slightly bigger follower */
   }
-}
 
-
-/* Custom infinite scrolling animation */
-@keyframes scroll-left {
-  0% {
-    transform: translateX(0); /* Start from the initial position */
+  /* Text inside the cursor */
+  .cursor-text {
+    display: none; /* Hide text initially */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(233, 41, 137); /* Adjust color as needed */
+    pointer-events: none; /* Avoid interfering with cursor events */
+    line-height: 4px; /* Adjust line height to ensure proper spacing */
+    text-align: center; /* Align the text to the center horizontally */
   }
-  100% {
-    transform: translateX(-100%); /* Scroll to the left */
+
+  .cursor.hovering .cursor-text {
+    display: block; /* Show text when hovering */
+    font-size: 4px; /* Adjust size of the text inside the cursor */
   }
-}
-
-/* Apply the scroll-left animation */
-.animate-scroll {
-  animation: scroll-left 15s linear infinite;
-  cursor: default; /* Removes the cursor from this section */
-}
-
-
-/* scrolling on website appear */
-@keyframes appear{
-  from{
-     opacity: 0;
-     scale: 0.5;
+  @media (hover: none) and (pointer: coarse) {
+    .cursor,
+    .cursor-follower {
+      display: none; /* Hide the custom cursor */
+    }
   }
-  to{
-     opacity: 1;
-     scale: 1;
+
+  @media (min-width: 1536px) {
+    /* 2XL screens */
+    .cursor.hovering {
+      transform: scale(8) translate(-50%, -50%); /* Increase size */
+    }
+
+    .cursor-follower.hovering {
+      transform: scale(3) translate(-50%, -50%); /* Bigger follower */
+    }
   }
-}
-.down{
-  animation: appear linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
-}
 
-.custom-list-item {
-  position: relative;
-  padding-left: 20px; /* Add space for the custom dash */
-  margin-bottom: 8px; /* Optional: Add spacing between lines */
-}
+  /* Custom infinite scrolling animation */
+  @keyframes scroll-left {
+    0% {
+      transform: translateX(0); /* Start from the initial position */
+    }
+    100% {
+      transform: translateX(-100%); /* Scroll to the left */
+    }
+  }
 
-.custom-list-item::before {
-  content: "-";
-  position: absolute;
-  left: 0; /* Align the dash to the start */
-}
+  /* Apply the scroll-left animation */
+  .animate-scroll {
+    animation: scroll-left 15s linear infinite;
+    cursor: default; /* Removes the cursor from this section */
+  }
 
+  /* scrolling on website appear */
+  @keyframes appear {
+    from {
+      opacity: 0;
+      scale: 0.5;
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+  .down {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
 
-/*border animations */
+  .custom-list-item {
+    position: relative;
+    padding-left: 20px; /* Add space for the custom dash */
+    margin-bottom: 8px; /* Optional: Add spacing between lines */
+  }
 
-  
+  .custom-list-item::before {
+    content: "-";
+    position: absolute;
+    left: 0; /* Align the dash to the start */
+  }
+
+  /*border animations */
 }
