--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
   body {
     background-color: #fcfcfc;
@@ -22,7 +23,7 @@
   }
 
   h2 {
-    @apply text-3xl md:text-4xl md:leading-8 leading-6 tracking-wide 2xl:text-[40px];
+    @apply text-3xl md:text-[40px] md:leading-8 leading-6 tracking-wide 2xl:text-[40px];
   }
 
   h3 {
@@ -38,7 +39,11 @@
   }
 
   p {
-    @apply text-lg leading-4 2xl:text-xl;
+    @apply text-sm leading-6 2xl:text-xl;
+    font-family: "Fragment Mono", monospace;
+    font-weight: 300;
+    letter-spacing: -0.04em;
+
   }
 
   .normal-section {
@@ -48,6 +53,7 @@
   .smolwidth {
     max-width: 548px;
   }
+  
   
   @media (min-width: 1536px) { 
     .smolwidth {
@@ -65,9 +71,9 @@
 
 
   
-  @layer utilities {
-
-  }
+@layer utilities {
+ 
+}
   
 
 
@@ -85,6 +91,8 @@ Prevents scrollbars if canvas is full screen */
   display: flex;       /* Centers the canvas inside the div */
   justify-content: center;
   margin-top: 50px;    /* Pushes it down from the top */
+  margin-bottom: 50px;    /* Pushes it down from the top */
+
   border: 2px solid white; /* Optional: lets you see the box edges */
 }
 
