--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -21,11 +21,11 @@
   }
 
   h2 {
-    @apply text-3xl md:text-[40px] md:leading-8 leading-6 tracking-wide 2xl:text-[40px];
+    @apply font-normal text-3xl md:text-[40px] md:leading-8 leading-6 tracking-wide 2xl:text-[40px];
   }
 
   h3 {
-    @apply text-2xl md:text-3xl 2xl:text-4xl md:leading-8 leading-6 tracking-wide;
+    @apply font-normal text-2xl md:text-3xl 2xl:text-4xl md:leading-8 leading-6 tracking-wide;
   }
 
   h4 {
@@ -37,7 +37,7 @@
   }
 
   p {
-    @apply text-sm leading-6 2xl:text-xl;
+    @apply text-sm leading-6  2xl:text-xl;
     font-family: "Fragment Mono", monospace;
     font-weight: 300;
     letter-spacing: -0.04em;
